# cryptographic-data-registration

./: Cargo.toml  README.md  main.rs
qr-code-scanner/: package-lock.json  package.json
qr-code-scanner/src/: App.js  QrScanner.js
src/: main.rs
webapp/: index.html  script.js  styles.css
