[package]
name = "pear-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.9.3", features = ["pem"] }
zeroize = "1.6.0"
tiny-bip39 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.12.0"
rand = "0.8.3"
web3 = "0.15"
tokio = "0.2.25"
hex = "0.4"
rand_core = "0.6"
rand_hc = "0.3"
chrono = { version = "0.4", features = ["serde"] }